CI/CD updates